# shadowslib

./: .gitignore  LICENSE.txt  pyproject.toml
scratch/ui/: hello_rich.py
